--- a/index.html
+++ b/index.html
@@ -480,38 +480,98 @@ footer {
 <button class="accordion-btn" onclick="toggleAcc(this)">Expand FAQ's</button>
 <div class="accordion-content">
 
-<p><strong>1. What can BJJ and your school do for me?</strong><br>BJJ helps fitness, confidence, discipline, stress relief, and community.</p>
+<p><strong>1. What can BJJ and your school do for me?</strong><br>
+Brazilian Jiu-Jitsu builds real confidence, functional strength, and mental discipline. 
+Training consistently improves your conditioning, mobility, focus, stress management, and overall mindset. 
+Students also gain a powerful sense of community — you’re not just joining a gym, you’re joining a culture built 
+around respect, accountability, and personal growth. Whether your goal is self-defense, fitness, competition, or 
+a life change, BJJ gives you measurable progress month after month.
+</p>
 
-<p><strong>2. Do I need to be in shape?</strong><br>We welcome all fitness levels.</p>
+<p><strong>2. Do I need to be in shape to start?</strong><br>
+No. BJJ gets you in shape.  
+Classes scale to your level — beginners start slow, learn positioning, drills, and controlled technique. 
+You’ll build cardio naturally through training, not by needing it beforehand. Everyone starts at zero.
+</p>
 
-<p><strong>3. Am I too old?</strong><br>No — all ages train.</p>
+<p><strong>3. Am I too old?</strong><br>
+Absolutely not. We have students in their teens, 20s, 30s, 40s, 50s, and beyond. 
+BJJ is a lifelong martial art that adapts to your body and your pace.  
+Your age is not a barrier — your consistency is.
+</p>
 
-<p><strong>4. Will I be expected to compete?</strong><br>Competition is optional.</p>
+<p><strong>4. Will I be expected to compete?</strong><br>
+Competition is optional.  
+You will never be pushed to compete unless you want to.  
+We offer competition training for those who choose that path, but regular classes are designed for all skill levels 
+and all goals — lifestyle, fitness, knowledge, or self-defense.
+</p>
 
-<p><strong>5. Prior experience needed?</strong><br>No.</p>
+<p><strong>5. Do I need prior martial arts experience?</strong><br>
+None.  
+Most students start with zero experience. The curriculum is structured for beginners first, then builds layer 
+by layer into advanced concepts. You learn fundamentals at your own pace.
+</p>
 
-<p><strong>6. Beginner classes?</strong><br>Yes — structured basics.</p>
+<p><strong>6. Do you offer beginner-friendly classes?</strong><br>
+Yes.  
+We have structured classes that teach the core positions, movements, transitions, and submissions in a controlled, 
+easy-to-absorb format. Instructors guide every step and ensure beginners never feel overwhelmed.
+</p>
 
-<p><strong>7. Striking?</strong><br>Yes — MMA, Muay Thai, Boxing.</p>
+<p><strong>7. Do you offer striking classes?</strong><br>
+Yes — we also offer Kickboxing, Muay Thai, and MMA.  
+These classes complement BJJ perfectly and are excellent for cardio, timing, confidence, and self-defense.
+</p>
 
-<p><strong>8. Weight loss?</strong><br>Very effective.</p>
+<p><strong>8. Will BJJ help me lose weight?</strong><br>
+Extremely.  
+Rolling, drilling, and class structure burn calories fast and build lean muscle. Most students see changes in 
+weight, energy, and confidence within the first few weeks — BJJ is one of the most effective and enjoyable 
+forms of fitness you can commit to.
+</p>
 
-<p><strong>9. Class structure?</strong><br>Warmup → Technique → Rolling.</p>
+<p><strong>9. What does a typical class look like?</strong><br>
+Classes usually follow this structure:<br>
+<strong>• Warm-up:</strong> mobility, movement patterns, light conditioning.<br>
+<strong>• Technique:</strong> step-by-step instruction, drilling, learning positions.<br>
+<strong>• Live training:</strong> situational training → controlled rolls → optional sparring.<br>
+Each class builds on the previous one, creating a steady progression in skill and understanding.
+</p>
 
-<p><strong>10. Family discounts?</strong><br>Yes.</p>
+<p><strong>10. Do you offer family or multi-student discounts?</strong><br>
+Yes.  
+We support families training together and offer reduced pricing for households with multiple members training.
+</p>
 
-<p><strong>11. Membership cost?</strong><br>Varies based on goals.</p>
+<p><strong>11. How much does membership cost?</strong><br>
+Pricing varies depending on training goals, programs, and membership type.  
+We offer multiple options — adults, kids, full access, and specialty programs.  
+Contact us directly for the most accurate plan based on what you want to achieve.
+</p>
 
-<p><strong>12. Kids classes?</strong><br>Age 5+.</p>
+<p><strong>12. What age can kids start?</strong><br>
+Kids classes start at age 5.  
+The program builds confidence, discipline, coordination, bully-proofing, and respect — all while teaching real 
+martial arts skills in a safe, structured environment.
+</p>
 
-<p><strong>13. Time to Black Belt?</strong><br>Depends on dedication.</p>
+<p><strong>13. How long does it take to earn a Black Belt?</strong><br>
+BJJ is earned, not given.  
+On average, it takes 8–12 years depending on consistency, attitude, effort, and dedication.  
+There are no shortcuts — every belt represents real skill and real work.
+</p>
 
-<p><strong>14. How to start?</strong><br>
-Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.
+<p><strong>14. How do I get started?</strong><br>
+Schedule your free class, show up with comfortable athletic clothing, and be ready to learn.  
+You can also call  
+<a href="tel:2532546538" style="color:#3B82F6;font-weight:700;">253-254-6538</a>  
+to speak directly with the academy.
 </p>
 
 </div>
 </section>
+
 
 <!-- FREE CLASS -->
 <section id="try">
@@ -615,3 +675,4 @@ function toggleAcc(btn){
 </div><!-- END site-wrap -->
 </body>
 </html>
+
