--- a/index.html
+++ b/index.html
@@ -323,6 +323,15 @@ footer {
   </a>
 </div>
 
+<!-- INTRO VIDEO -->
+<video 
+  src="assets/Marcello C Monteiro.mp4"
+  style="width:100%; max-width:420px; border-radius:14px; display:block; margin:25px auto 10px auto;"
+  controls
+  preload="metadata">
+</video>
+
+   
 <!-- PROGRAMS -->
 <section>
 <h2>Programs</h2>
@@ -675,4 +684,5 @@ function toggleAcc(btn){
 </div><!-- END site-wrap -->
 </body>
 </html>
+
 
