--- a/index.html
+++ b/index.html
@@ -323,14 +323,15 @@ footer {
   </a>
 </div>
 
-<!-- INTRO VIDEO -->
+<!-- INTRO VIDEO (INLINE, NO POPUP) -->
 <video 
   src="assets/Marcello C Monteiro.mp4"
-  style="width:100%; max-width:420px; border-radius:14px; display:block; margin:25px auto 10px auto;"
+  style="width:100%; max-width:300px; border-radius:14px; display:block; margin:25px auto 10px auto;"
   controls
-  preload="metadata">
+  preload="metadata"
+  playsinline
+  webkit-playsinline>
 </video>
-
 
    
 <!-- PROGRAMS -->
@@ -685,6 +686,7 @@ function toggleAcc(btn){
 </div><!-- END site-wrap -->
 </body>
 </html>
+
 
 
 
