--- a/self-defense-tacoma.html
+++ b/self-defense-tacoma.html
@@ -1,2 +1,23 @@
 <title>Self-Defense Classes Tacoma | Practical Protection</title>
 <meta name="description" content="Practical self-defense training in Tacoma using Brazilian Jiu-Jitsu. Learn real-world protection at GRIT CITY BJJ.">
+
+<h1>Brazilian Jiu-Jitsu in Tacoma</h1>
+
+<p>GRIT CITY BJJ offers authentic Brazilian Jiu-Jitsu training in Tacoma for adults and kids. Our focus is real skill, discipline, and long-term development.</p>
+
+<h2>Why Train at GRIT CITY BJJ</h2>
+<ul>
+  <li>Proven instruction.</li>
+  <li>Structured programs.</li>
+  <li>Supportive, disciplined environment.</li>
+</ul>
+
+<h2>Who This Program Is For</h2>
+<p>Beginners, experienced athletes, competitors, and anyone seeking practical self-defense.</p>
+
+<h2>Location</h2>
+<p>3635 S Lawrence St, STE G, Tacoma, WA 98409</p>
+<iframe src="GOOGLE_MAP_EMBED_HERE"></iframe>
+
+<h2>Start Training</h2>
+<p><a href="/free-trial-bjj-tacoma.html">Try a FREE class</a></p>
