--- a/brazilian-jiu-jitsu-tacoma.html
+++ b/brazilian-jiu-jitsu-tacoma.html
@@ -1,2 +1,21 @@
 <title>Brazilian Jiu-Jitsu in Tacoma | GRIT CITY BJJ</title>
 <meta name="description" content="Train Brazilian Jiu-Jitsu in Tacoma at GRIT CITY BJJ. Proven instruction, real results, adults and kids programs. Try a free class.">
+
+<p>GRIT CITY BJJ offers authentic Brazilian Jiu-Jitsu training in Tacoma for adults and kids. Our focus is real skill, discipline, and long-term development.</p>
+
+<h2>Why Train at GRIT CITY BJJ</h2>
+<ul>
+  <li>Proven instruction.</li>
+  <li>Structured programs.</li>
+  <li>Supportive, disciplined environment.</li>
+</ul>
+
+<h2>Who This Program Is For</h2>
+<p>Beginners, experienced athletes, competitors, and anyone seeking practical self-defense.</p>
+
+<h2>Location</h2>
+<p>3635 S Lawrence St, STE G, Tacoma, WA 98409</p>
+<iframe src="GOOGLE_MAP_EMBED_HERE"></iframe>
+
+<h2>Start Training</h2>
+<p><a href="/free-trial-bjj-tacoma.html">Try a FREE class</a></p>
