Refactor Brazilian Jiu-Jitsu Tacoma page structure

--- a/brazilian-jiu-jitsu-tacoma.html
+++ b/brazilian-jiu-jitsu-tacoma.html
@@ -1,21 +1,60 @@
-<title>Brazilian Jiu-Jitsu in Tacoma | GRIT CITY BJJ</title>
-<meta name="description" content="Train Brazilian Jiu-Jitsu in Tacoma at GRIT CITY BJJ. Proven instruction, real results, adults and kids programs. Try a free class.">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<p>GRIT CITY BJJ offers authentic Brazilian Jiu-Jitsu training in Tacoma for adults and kids. Our focus is real skill, discipline, and long-term development.</p>
+  <title>Brazilian Jiu-Jitsu in Tacoma | GRIT CITY BJJ</title>
+  <meta name="description" content="Train Brazilian Jiu-Jitsu in Tacoma at GRIT CITY BJJ. Proven instruction, real results. Try a free class.">
 
-<h2>Why Train at GRIT CITY BJJ</h2>
-<ul>
-  <li>Proven instruction.</li>
-  <li>Structured programs.</li>
-  <li>Supportive, disciplined environment.</li>
-</ul>
+  <!-- SAME CSS AS INDEX -->
+  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="/assets/css/seo-pages.css">
 
-<h2>Who This Program Is For</h2>
-<p>Beginners, experienced athletes, competitors, and anyone seeking practical self-defense.</p>
+  <!-- SAME JS AS INDEX -->
+  <script src="/assets/main.js" defer></script>
+</head>
 
-<h2>Location</h2>
-<p>3635 S Lawrence St, STE G, Tacoma, WA 98409</p>
-<iframe src="GOOGLE_MAP_EMBED_HERE"></iframe>
+<body>
 
-<h2>Start Training</h2>
-<p><a href="/free-trial-bjj-tacoma.html">Try a FREE class</a></p>
+<!-- HEADER -->
+<!-- COPY THIS BLOCK VERBATIM FROM index.html -->
+<!-- banner + navigation ONLY -->
+<header>
+  <!-- PASTE EXACT INDEX HEADER HERE -->
+</header>
+
+<main class="seo-wrap">
+
+  <h1>Brazilian Jiu-Jitsu in Tacoma</h1>
+
+  <p>GRIT CITY BJJ provides authentic Brazilian Jiu-Jitsu training in Tacoma for adults and kids focused on real skill, discipline, and long-term development.</p>
+
+  <h2>Why Train at GRIT CITY BJJ</h2>
+  <ul>
+    <li>Structured instruction.</li>
+    <li>Beginner-friendly environment.</li>
+    <li>Competition-proven techniques.</li>
+  </ul>
+
+  <h2>Who This Program Is For</h2>
+  <p>Adults, beginners, competitors, and anyone seeking practical self-defense through Brazilian Jiu-Jitsu.</p>
+
+  <h2>Location</h2>
+  <p>3635 S Lawrence St, STE G, Tacoma, WA 98409</p>
+
+  <!-- COPY MAP LINK OR IFRAME EXACTLY FROM INDEX -->
+  <!-- NO MODIFICATIONS -->
+  <div class="map">
+    <!-- PASTE MAP HERE -->
+  </div>
+
+  <div class="cta-box">
+    <h2>Try a Free Class</h2>
+    <a href="/free-trial-bjj-tacoma.html">Try a FREE Class</a>
+  </div>
+
+</main>
+
+</body>
+</html>
