--- a/brazilian-jiu-jitsu-tacoma.html
+++ b/brazilian-jiu-jitsu-tacoma.html
@@ -5,49 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Brazilian Jiu-Jitsu in Tacoma | GRIT CITY BJJ</title>
-  <meta name="description" content="Train Brazilian Jiu-Jitsu in Tacoma at GRIT CITY BJJ. Proven instruction, real results. Try a free class.">
+  <meta name="description" content="Train Brazilian Jiu-Jitsu in Tacoma at GRIT CITY BJJ. Structured instruction, real results, and disciplined training.">
 
-  <!-- SAME CSS AS INDEX -->
   <link rel="stylesheet" href="/assets/style.css">
-  <link rel="stylesheet" href="/assets/css/seo-pages.css">
-
-  <!-- SAME JS AS INDEX -->
+  <link rel="stylesheet" href="/css/seo-pages.css">
   <script src="/assets/main.js" defer></script>
 </head>
 
 <body>
 
-<!-- HEADER -->
-<!-- COPY THIS BLOCK VERBATIM FROM index.html -->
-<!-- banner + navigation ONLY -->
 <header>
-  <!-- PASTE EXACT INDEX HEADER HERE -->
+  <!-- PASTE HEADER FROM index.html HERE (BANNER + NAV ONLY) -->
 </header>
 
 <main class="seo-wrap">
 
   <h1>Brazilian Jiu-Jitsu in Tacoma</h1>
 
-  <p>GRIT CITY BJJ provides authentic Brazilian Jiu-Jitsu training in Tacoma for adults and kids focused on real skill, discipline, and long-term development.</p>
+  <p>GRIT CITY BJJ provides authentic Brazilian Jiu-Jitsu training in Tacoma for adults and kids focused on skill, discipline, and long-term growth.</p>
 
-  <h2>Why Train at GRIT CITY BJJ</h2>
+  <h2>Why Train Brazilian Jiu-Jitsu</h2>
+  <p>Brazilian Jiu-Jitsu develops confidence, fitness, and practical self-defense through leverage-based grappling.</p>
+
+  <h2>Our Training Environment</h2>
   <ul>
-    <li>Structured instruction.</li>
-    <li>Beginner-friendly environment.</li>
-    <li>Competition-proven techniques.</li>
+    <li>Beginner-friendly instruction.</li>
+    <li>Competition-tested techniques.</li>
+    <li>Respectful, disciplined culture.</li>
   </ul>
-
-  <h2>Who This Program Is For</h2>
-  <p>Adults, beginners, competitors, and anyone seeking practical self-defense through Brazilian Jiu-Jitsu.</p>
 
   <h2>Location</h2>
   <p>3635 S Lawrence St, STE G, Tacoma, WA 98409</p>
 
-  <!-- COPY MAP LINK OR IFRAME EXACTLY FROM INDEX -->
-  <!-- NO MODIFICATIONS -->
-  <div class="map">
-    <!-- PASTE MAP HERE -->
-  </div>
+  <!-- PASTE MAP LINK OR IFRAME FROM index.html HERE -->
 
   <div class="cta-box">
     <h2>Try a Free Class</h2>
