Revise Kids BJJ Tacoma page content and structure
Updated the HTML structure and content for the Kids BJJ Tacoma page, including new headings, descriptions, and benefits of the program.

--- a/kids-bjj-tacoma.html
+++ b/kids-bjj-tacoma.html
@@ -1,23 +1,50 @@
-<title>Kids BJJ Tacoma | Confidence, Discipline, Real Skills</title>
-<meta name="description" content="Kids Brazilian Jiu-Jitsu in Tacoma. Build confidence, discipline, and self-defense skills at GRIT CITY BJJ. Safe, structured training.">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<h1>Brazilian Jiu-Jitsu in Tacoma</h1>
+  <title>Kids BJJ Tacoma | GRIT CITY BJJ</title>
+  <meta name="description" content="Kids Brazilian Jiu-Jitsu in Tacoma focused on confidence, discipline, and self-defense at GRIT CITY BJJ.">
 
-<p>GRIT CITY BJJ offers authentic Brazilian Jiu-Jitsu training in Tacoma for adults and kids. Our focus is real skill, discipline, and long-term development.</p>
+  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="/css/seo-pages.css">
+  <script src="/assets/main.js" defer></script>
+</head>
 
-<h2>Why Train at GRIT CITY BJJ</h2>
-<ul>
-  <li>Proven instruction.</li>
-  <li>Structured programs.</li>
-  <li>Supportive, disciplined environment.</li>
-</ul>
+<body>
 
-<h2>Who This Program Is For</h2>
-<p>Beginners, experienced athletes, competitors, and anyone seeking practical self-defense.</p>
+<header>
+  <!-- PASTE HEADER FROM index.html HERE -->
+</header>
 
-<h2>Location</h2>
-<p>3635 S Lawrence St, STE G, Tacoma, WA 98409</p>
-<iframe src="GOOGLE_MAP_EMBED_HERE"></iframe>
+<main class="seo-wrap">
 
-<h2>Start Training</h2>
-<p><a href="/free-trial-bjj-tacoma.html">Try a FREE class</a></p>
+  <h1>Kids Brazilian Jiu-Jitsu in Tacoma</h1>
+
+  <p>Our kids BJJ program in Tacoma helps children build confidence, coordination, discipline, and respect through structured training.</p>
+
+  <h2>Benefits of Kids BJJ</h2>
+  <ul>
+    <li>Improved focus and confidence.</li>
+    <li>Bullying prevention skills.</li>
+    <li>Positive physical activity.</li>
+  </ul>
+
+  <h2>Safe and Structured Classes</h2>
+  <p>Age-appropriate instruction in a supportive, supervised environment.</p>
+
+  <h2>Location</h2>
+  <p>3635 S Lawrence St, STE G, Tacoma, WA 98409</p>
+
+  <!-- PASTE MAP LINK OR IFRAME FROM index.html HERE -->
+
+  <div class="cta-box">
+    <h2>Enroll Your Child</h2>
+    <a href="/free-trial-bjj-tacoma.html">Try a FREE Class</a>
+  </div>
+
+</main>
+
+</body>
+</html>
