--- a/nogi-bjj-tacoma.html
+++ b/nogi-bjj-tacoma.html
@@ -1,23 +1,50 @@
-<title>No-Gi BJJ Tacoma | Competition-Level Training</title>
-<meta name="description" content="No-Gi Brazilian Jiu-Jitsu in Tacoma. Fast-paced, modern grappling at GRIT CITY BJJ. Train smart. Train hard.">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<h1>Brazilian Jiu-Jitsu in Tacoma</h1>
+  <title>No-Gi BJJ Tacoma | GRIT CITY BJJ</title>
+  <meta name="description" content="No-Gi Brazilian Jiu-Jitsu in Tacoma. Modern, fast-paced grappling at GRIT CITY BJJ.">
 
-<p>GRIT CITY BJJ offers authentic Brazilian Jiu-Jitsu training in Tacoma for adults and kids. Our focus is real skill, discipline, and long-term development.</p>
+  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="/css/seo-pages.css">
+  <script src="/assets/main.js" defer></script>
+</head>
 
-<h2>Why Train at GRIT CITY BJJ</h2>
-<ul>
-  <li>Proven instruction.</li>
-  <li>Structured programs.</li>
-  <li>Supportive, disciplined environment.</li>
-</ul>
+<body>
 
-<h2>Who This Program Is For</h2>
-<p>Beginners, experienced athletes, competitors, and anyone seeking practical self-defense.</p>
+<header>
+  <!-- PASTE HEADER FROM index.html HERE -->
+</header>
 
-<h2>Location</h2>
-<p>3635 S Lawrence St, STE G, Tacoma, WA 98409</p>
-<iframe src="GOOGLE_MAP_EMBED_HERE"></iframe>
+<main class="seo-wrap">
 
-<h2>Start Training</h2>
-<p><a href="/free-trial-bjj-tacoma.html">Try a FREE class</a></p>
+  <h1>No-Gi Brazilian Jiu-Jitsu in Tacoma</h1>
+
+  <p>No-Gi training emphasizes speed, control, and real-world grappling without reliance on the gi.</p>
+
+  <h2>Why Train No-Gi</h2>
+  <ul>
+    <li>Realistic grappling scenarios.</li>
+    <li>Improved athleticism.</li>
+    <li>Competition and self-defense crossover.</li>
+  </ul>
+
+  <h2>All Skill Levels Welcome</h2>
+  <p>Structured training for beginners through advanced athletes.</p>
+
+  <h2>Location</h2>
+  <p>3635 S Lawrence St, STE G, Tacoma, WA 98409</p>
+
+  <!-- PASTE MAP LINK OR IFRAME FROM index.html HERE -->
+
+  <div class="cta-box">
+    <h2>Start No-Gi Training</h2>
+    <a href="/free-trial-bjj-tacoma.html">Try a FREE Class</a>
+  </div>
+
+</main>
+
+</body>
+</html>
