--- a/self-defense-tacoma.html
+++ b/self-defense-tacoma.html
@@ -1,23 +1,50 @@
-<title>Self-Defense Classes Tacoma | Practical Protection</title>
-<meta name="description" content="Practical self-defense training in Tacoma using Brazilian Jiu-Jitsu. Learn real-world protection at GRIT CITY BJJ.">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<h1>Brazilian Jiu-Jitsu in Tacoma</h1>
+  <title>Self-Defense Classes Tacoma | GRIT CITY BJJ</title>
+  <meta name="description" content="Practical self-defense training in Tacoma using Brazilian Jiu-Jitsu principles at GRIT CITY BJJ.">
 
-<p>GRIT CITY BJJ offers authentic Brazilian Jiu-Jitsu training in Tacoma for adults and kids. Our focus is real skill, discipline, and long-term development.</p>
+  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="/css/seo-pages.css">
+  <script src="/assets/main.js" defer></script>
+</head>
 
-<h2>Why Train at GRIT CITY BJJ</h2>
-<ul>
-  <li>Proven instruction.</li>
-  <li>Structured programs.</li>
-  <li>Supportive, disciplined environment.</li>
-</ul>
+<body>
 
-<h2>Who This Program Is For</h2>
-<p>Beginners, experienced athletes, competitors, and anyone seeking practical self-defense.</p>
+<header>
+  <!-- PASTE HEADER FROM index.html HERE -->
+</header>
 
-<h2>Location</h2>
-<p>3635 S Lawrence St, STE G, Tacoma, WA 98409</p>
-<iframe src="GOOGLE_MAP_EMBED_HERE"></iframe>
+<main class="seo-wrap">
 
-<h2>Start Training</h2>
-<p><a href="/free-trial-bjj-tacoma.html">Try a FREE class</a></p>
+  <h1>Self-Defense Training in Tacoma</h1>
+
+  <p>Our self-defense program focuses on awareness, control, and real-world protection using Brazilian Jiu-Jitsu.</p>
+
+  <h2>Practical Protection</h2>
+  <ul>
+    <li>Realistic scenarios.</li>
+    <li>Control-based techniques.</li>
+    <li>Confidence under pressure.</li>
+  </ul>
+
+  <h2>Who This Is For</h2>
+  <p>Adults seeking effective, functional self-defense training.</p>
+
+  <h2>Location</h2>
+  <p>3635 S Lawrence St, STE G, Tacoma, WA 98409</p>
+
+  <!-- PASTE MAP LINK OR IFRAME FROM index.html HERE -->
+
+  <div class="cta-box">
+    <h2>Learn Self-Defense</h2>
+    <a href="/free-trial-bjj-tacoma.html">Try a FREE Class</a>
+  </div>
+
+</main>
+
+</body>
+</html>
