Revise free trial BJJ page with new content and layout
Updated the HTML structure and content for the free trial page.

--- a/free-trial-bjj-tacoma.html
+++ b/free-trial-bjj-tacoma.html
@@ -1,23 +1,47 @@
-<title>Free BJJ Class Tacoma | Try GRIT CITY BJJ</title>
-<meta name="description" content="Try a free Brazilian Jiu-Jitsu class in Tacoma. No pressure. No contracts. Start training at GRIT CITY BJJ today.">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<h1>Brazilian Jiu-Jitsu in Tacoma</h1>
+  <title>Free BJJ Class Tacoma | GRIT CITY BJJ</title>
+  <meta name="description" content="Try a free Brazilian Jiu-Jitsu class in Tacoma at GRIT CITY BJJ. No pressure. No contracts.">
 
-<p>GRIT CITY BJJ offers authentic Brazilian Jiu-Jitsu training in Tacoma for adults and kids. Our focus is real skill, discipline, and long-term development.</p>
+  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="/css/seo-pages.css">
+  <script src="/assets/main.js" defer></cript>
+</head>
 
-<h2>Why Train at GRIT CITY BJJ</h2>
-<ul>
-  <li>Proven instruction.</li>
-  <li>Structured programs.</li>
-  <li>Supportive, disciplined environment.</li>
-</ul>
+<body>
 
-<h2>Who This Program Is For</h2>
-<p>Beginners, experienced athletes, competitors, and anyone seeking practical self-defense.</p>
+<header>
+  <!-- PASTE HEADER FROM index.html HERE -->
+</header>
 
-<h2>Location</h2>
-<p>3635 S Lawrence St, STE G, Tacoma, WA 98409</p>
-<iframe src="GOOGLE_MAP_EMBED_HERE"></iframe>
+<main class="seo-wrap">
 
-<h2>Start Training</h2>
-<p><a href="/free-trial-bjj-tacoma.html">Try a FREE class</a></p>
+  <h1>Try a Free Brazilian Jiu-Jitsu Class</h1>
+
+  <p>Experience Brazilian Jiu-Jitsu at GRIT CITY BJJ with a free introductory class. No experience required.</p>
+
+  <h2>What to Expect</h2>
+  <ul>
+    <li>Welcoming environment.</li>
+    <li>Structured instruction.</li>
+    <li>No long-term commitment.</li>
+  </ul>
+
+  <h2>Visit Us</h2>
+  <p>3635 S Lawrence St, STE G, Tacoma, WA 98409</p>
+
+  <!-- PASTE MAP LINK OR IFRAME FROM index.html HERE -->
+
+  <div class="cta-box">
+    <h2>Book Your Free Class</h2>
+    <a href="mailto:gritcitybjj@gmail.com">Contact Us</a>
+  </div>
+
+</main>
+
+</body>
+</html>
