--- a/testindex.html
+++ b/testindex.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-
 <title>GRIT CITY BJJ | Tacoma, WA</title>
 
-<!-- DISABLE ZOOM — FINAL, FULL LOCKDOWN -->
+<!-- DISABLE ZOOM — FULL LOCKDOWN -->
 <meta name="viewport"
 content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover" />
 
@@ -19,7 +18,7 @@ html, body {
   touch-action: pan-x pan-y !important;
 }
 input, textarea, select {
-  font-size: 16px !important; /* prevents iOS auto-zoom on inputs */
+  font-size: 16px !important;
 }
 * {
   touch-action: manipulation;
@@ -37,9 +36,25 @@ body {
   overflow-x: hidden;
 }
 
+/* DESKTOP WALLS — SLIMMED TO 900px */
+@media (min-width: 1024px) {
+  body {
+    display: flex;
+    justify-content: center;
+  }
+  .site-wrap {
+    width: 900px;
+    background: #0A0A0A;
+  }
+  .banner-img {
+    width: 100%;
+    border-radius: 14px;
+  }
+}
+
 section {
   padding: 45px 18px;
-  max-width: 1100px;
+  max-width: 900px;
   margin: 0 auto;
 }
 
@@ -51,7 +66,7 @@ h2 {
   color: #ffffff;
 }
 
-/* HEADER (20px spacing ABOVE header only) ------------------------- */
+/* HEADER */
 .header-wrap {
   margin-top: 20px;
 }
@@ -65,7 +80,7 @@ h2 {
   box-shadow:0 5px 24px rgba(0,0,0,0.55);
 }
 
-/* NAV BAR --------------------------------------------------------- */
+/* NAV BAR */
 .navbar {
   background: rgba(10,10,10,0.75);
   backdrop-filter: blur(6px);
@@ -75,7 +90,7 @@ h2 {
   padding: 10px 0;
 }
 .nav-inner {
-  max-width:1100px;
+  max-width:900px;
   margin:0 auto;
   display:flex;
   justify-content:center;
@@ -93,9 +108,7 @@ h2 {
   border-color:#3B82F6;
 }
 
-/* PROGRAMS -------------------------------------------------------- */
-#programs-title { color:white; }
-
+/* PROGRAMS */
 .program-grid {
   display:grid;
   grid-template-columns:repeat(2, 1fr);
@@ -112,7 +125,7 @@ h2 {
   color:white;
 }
 
-/* SCHEDULE -------------------------------------------------------- */
+/* SCHEDULE */
 .schedule-card {
   background:#111827;
   padding:16px;
@@ -126,7 +139,7 @@ h2 {
   border-radius:12px;
 }
 
-/* LOCATION -------------------------------------------------------- */
+/* LOCATION */
 .location-card {
   background:#111827;
   padding:22px;
@@ -149,7 +162,7 @@ h2 {
   border:1px solid #1F2937;
 }
 
-/* GALLERY --------------------------------------------------------- */
+/* GALLERY */
 .gallery-scroll {
   display:flex;
   overflow-x:auto;
@@ -164,7 +177,7 @@ h2 {
   cursor:pointer;
 }
 
-/* LINEAGE --------------------------------------------------------- */
+/* LINEAGE */
 .lineage-grid {
   display:grid;
   grid-template-columns:repeat(auto-fit, minmax(130px,1fr));
@@ -178,7 +191,7 @@ h2 {
   object-fit:cover;
 }
 
-/* INSTRUCTORS ----------------------------------------------------- */
+/* INSTRUCTORS */
 .instructor-grid {
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
@@ -198,7 +211,7 @@ h2 {
   border-radius:12px;
 }
 
-/* ACCORDIONS ------------------------------------------------------ */
+/* ACCORDIONS */
 .accordion-btn {
   width:100%;
   padding:14px 18px;
@@ -225,7 +238,7 @@ h2 {
   border:1px solid #1F2937;
 }
 
-/* FORM ------------------------------------------------------------ */
+/* FORM */
 form input, form textarea {
   width:100%;
   background:#1F2937;
@@ -245,7 +258,7 @@ form button {
   margin-top:8px;
 }
 
-/* FOOTER ---------------------------------------------------------- */
+/* FOOTER */
 footer {
   padding:30px 18px;
   background:#080808;
@@ -253,7 +266,6 @@ footer {
   margin-top:30px;
 }
 
-/* Bottom images: EACH ON OWN ROW */
 .footer-img-row {
   text-align:center;
   margin-bottom:22px;
@@ -265,7 +277,7 @@ footer {
   padding:8px;
 }
 
-/* Pulse Animation for Login Button */
+/* PULSE LOGIN BUTTON */
 @keyframes pulseButton {
   0%   { transform: scale(1); }
   50%  { transform: scale(1.06); }
@@ -274,22 +286,23 @@ footer {
 .pulse-login {
   animation: pulseButton 1.8s infinite ease-in-out;
 }
+
 </style>
 </head>
 
 <body>
+<div class="site-wrap">
 
-<!-- SPACING ABOVE HEADER + HEADER IMAGE -->
+<!-- HEADER -->
 <div class="header-wrap">
   <img src="header.webp" class="banner-img">
 </div>
 
-<!-- TAGLINE -->
 <div style="text-align:center; margin:18px 0 0 0; font-size:1.1rem; font-weight:700; color:#ffffff;">
   BJJ COACH International Association | Tacoma, WA
 </div>
-   
-<!-- NAVIGATION -->
+
+<!-- NAV -->
 <div class="navbar">
   <div class="nav-inner">
     <a href="#conduct">Conduct</a>
@@ -299,26 +312,31 @@ footer {
   </div>
 </div>
 
-<!-- STUDENT LOGIN BUTTON -->
+<!-- LOGIN -->
 <div style="text-align:center; margin:18px 0;">
   <a href="https://bjjtacoma.kicksite.net/users/sign_in"
      target="_blank"
      rel="noopener noreferrer"
      class="pulse-login"
-     style="background:#3B82F6;
-            padding:12px 24px;
-            border-radius:10px;
-            color:white;
-            font-weight:800;
-            text-decoration:none;
-            display:inline-block;">
+     style="background:#3B82F6; padding:12px 24px; border-radius:10px; color:white; font-weight:800; text-decoration:none; display:inline-block;">
      Student Login
   </a>
 </div>
 
+<!-- INTRO VIDEO (INLINE, NO POPUP) -->
+<video 
+  src="assets/Marcello C Monteiro.mp4"
+  style="width:100%; max-width:300px; border-radius:14px; display:block; margin:25px auto 10px auto;"
+  controls
+  preload="metadata"
+  playsinline
+  webkit-playsinline>
+</video>
+
+   
 <!-- PROGRAMS -->
 <section>
-<h2 id="programs-title">Programs</h2>
+<h2>Programs</h2>
 <div class="program-grid">
   <div class="program-box">Adult BJJ</div>
   <div class="program-box">Kids BJJ</div>
@@ -353,10 +371,8 @@ footer {
 </div>
 </section>
 
-<!-- tacoma.webp -->
+<!-- IMAGES -->
 <img src="tacoma.webp" class="banner-img">
-
-<!-- face-off.webp -->
 <img src="face-off.webp" class="banner-img">
 
 <!-- GALLERY -->
@@ -373,11 +389,7 @@ footer {
 <section>
 <h2>Best of Tacoma Awards</h2>
 <div class="gallery-scroll">
-
-  <!-- NEW FIRST ENTRY -->
   <img src="best_of_tacoma_2025.jpg" onclick="pop(this)">
-
-  <!-- REVERSED ORDER -->
   <img src="best_of_tacoma_2024.jpg" onclick="pop(this)">
   <img src="best_of_tacoma_2023.jpg" onclick="pop(this)">
   <img src="best_of_tacoma_2022.jpg" onclick="pop(this)">
@@ -391,7 +403,6 @@ footer {
   <img src="best_of_tacoma_2014.jpg" onclick="pop(this)">
   <img src="best_of_tacoma_2013.jpg" onclick="pop(this)">
   <img src="best_of_tacoma_2012.jpg" onclick="pop(this)">
-
 </div>
 </section>
 
@@ -408,14 +419,13 @@ footer {
 </div>
 </section>
 
-<!-- INSTRUCTORS -->
+<!-- INSTRUCTORS (FINKEL REMOVED) -->
 <section id="instructors">
 <h2>Instructors</h2>
 <div class="instructor-grid">
   <div class="instructor-card"><img src="mcm_5th_degree.jpg" onclick="pop(this)"><h3>Professor Marcello C Monteiro</h3></div>
   <div class="instructor-card"><img src="michael_proctor.JPG" onclick="pop(this)"><h3>Professor Michael Proctor</h3></div>
   <div class="instructor-card"><img src="david_gines.JPG" onclick="pop(this)"><h3>Professor David Gines</h3></div>
-  <div class="instructor-card"><img src="marcus_finkel.png" onclick="pop(this)"><h3>Coach Marcus Finkel</h3></div>
   <div class="instructor-card"><img src="donnie_mcmasters.png" onclick="pop(this)"><h3>Coach Donnie McMasters</h3></div>
   <div class="instructor-card"><img src="chris_kuykendall.png" onclick="pop(this)"><h3>Coach Chris Kuykendall</h3></div>
 </div>
@@ -475,55 +485,111 @@ footer {
 </div>
 </section>
 
-<!-- FAQS -->
+<!-- FAQ -->
 <section id="faqs">
 <h2>Brazilian Jiu-Jitsu FAQ's</h2>
 <button class="accordion-btn" onclick="toggleAcc(this)">Expand FAQ's</button>
 <div class="accordion-content">
 
-<p><strong>1. What can BJJ and your school do for me?</strong><br>BJJ helps fitness, confidence, discipline, stress relief, and community.</p>
+<p><strong>1. What can BJJ and your school do for me?</strong><br>
+Brazilian Jiu-Jitsu builds real confidence, functional strength, and mental discipline. 
+Training consistently improves your conditioning, mobility, focus, stress management, and overall mindset. 
+Students also gain a powerful sense of community — you’re not just joining a gym, you’re joining a culture built 
+around respect, accountability, and personal growth. Whether your goal is self-defense, fitness, competition, or 
+a life change, BJJ gives you measurable progress month after month.
+</p>
 
-<p><strong>2. Do I need to be in shape?</strong><br>We welcome all fitness levels.</p>
+<p><strong>2. Do I need to be in shape to start?</strong><br>
+No. BJJ gets you in shape.  
+Classes scale to your level — beginners start slow, learn positioning, drills, and controlled technique. 
+You’ll build cardio naturally through training, not by needing it beforehand. Everyone starts at zero.
+</p>
 
-<p><strong>3. Am I too old?</strong><br>No — all ages train.</p>
+<p><strong>3. Am I too old?</strong><br>
+Absolutely not. We have students in their teens, 20s, 30s, 40s, 50s, and beyond. 
+BJJ is a lifelong martial art that adapts to your body and your pace.  
+Your age is not a barrier — your consistency is.
+</p>
 
-<p><strong>4. Will I be expected to compete?</strong><br>Competition is optional.</p>
+<p><strong>4. Will I be expected to compete?</strong><br>
+Competition is optional.  
+You will never be pushed to compete unless you want to.  
+We offer competition training for those who choose that path, but regular classes are designed for all skill levels 
+and all goals — lifestyle, fitness, knowledge, or self-defense.
+</p>
 
-<p><strong>5. Prior experience needed?</strong><br>No.</p>
+<p><strong>5. Do I need prior martial arts experience?</strong><br>
+None.  
+Most students start with zero experience. The curriculum is structured for beginners first, then builds layer 
+by layer into advanced concepts. You learn fundamentals at your own pace.
+</p>
 
-<p><strong>6. Beginner classes?</strong><br>Yes — structured basics.</p>
+<p><strong>6. Do you offer beginner-friendly classes?</strong><br>
+Yes.  
+We have structured classes that teach the core positions, movements, transitions, and submissions in a controlled, 
+easy-to-absorb format. Instructors guide every step and ensure beginners never feel overwhelmed.
+</p>
 
-<p><strong>7. Striking?</strong><br>Yes — MMA, Muay Thai, Boxing.</p>
+<p><strong>7. Do you offer striking classes?</strong><br>
+Yes — we also offer Kickboxing, Muay Thai, and MMA.  
+These classes complement BJJ perfectly and are excellent for cardio, timing, confidence, and self-defense.
+</p>
 
-<p><strong>8. Weight loss?</strong><br>Very effective.</p>
+<p><strong>8. Will BJJ help me lose weight?</strong><br>
+Extremely.  
+Rolling, drilling, and class structure burn calories fast and build lean muscle. Most students see changes in 
+weight, energy, and confidence within the first few weeks — BJJ is one of the most effective and enjoyable 
+forms of fitness you can commit to.
+</p>
 
-<p><strong>9. Class structure?</strong><br>Warmup → Technique → Rolling.</p>
+<p><strong>9. What does a typical class look like?</strong><br>
+Classes usually follow this structure:<br>
+<strong>• Warm-up:</strong> mobility, movement patterns, light conditioning.<br>
+<strong>• Technique:</strong> step-by-step instruction, drilling, learning positions.<br>
+<strong>• Live training:</strong> situational training → controlled rolls → optional sparring.<br>
+Each class builds on the previous one, creating a steady progression in skill and understanding.
+</p>
 
-<p><strong>10. Family discounts?</strong><br>Yes.</p>
+<p><strong>10. Do you offer family or multi-student discounts?</strong><br>
+Yes.  
+We support families training together and offer reduced pricing for households with multiple members training.
+</p>
 
-<p><strong>11. Membership cost?</strong><br>Varies based on goals.</p>
+<p><strong>11. How much does membership cost?</strong><br>
+Pricing varies depending on training goals, programs, and membership type.  
+We offer multiple options — adults, kids, full access, and specialty programs.  
+Contact us directly for the most accurate plan based on what you want to achieve.
+</p>
 
-<p><strong>12. Kids classes?</strong><br>Age 5+.</p>
+<p><strong>12. What age can kids start?</strong><br>
+Kids classes start at age 5.  
+The program builds confidence, discipline, coordination, bully-proofing, and respect — all while teaching real 
+martial arts skills in a safe, structured environment.
+</p>
 
-<p><strong>13. Time to Black Belt?</strong><br>Depends on dedication.</p>
+<p><strong>13. How long does it take to earn a Black Belt?</strong><br>
+BJJ is earned, not given.  
+On average, it takes 8–12 years depending on consistency, attitude, effort, and dedication.  
+There are no shortcuts — every belt represents real skill and real work.
+</p>
 
-<p><strong>14. How to start?</strong><br>
-Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.
+<p><strong>14. How do I get started?</strong><br>
+Schedule your free class, show up with comfortable athletic clothing, and be ready to learn.  
+You can also call  
+<a href="tel:2532546538" style="color:#3B82F6;font-weight:700;">253-254-6538</a>  
+to speak directly with the academy.
 </p>
 
 </div>
 </section>
 
-<!-- TRY FREE CLASS -->
+
+<!-- FREE CLASS -->
 <section id="try">
 <h2>Try a Free Class</h2>
 
 <form id="freeClassForm" action="https://formsubmit.co/gritcitybjj@gmail.com" method="POST">
-
-  <!-- Disable CAPTCHA -->
   <input type="hidden" name="_captcha" value="false">
-
-  <!-- No redirect after submit -->
   <input type="hidden" name="_next" value="">
 
   <input name="Name" placeholder="Name (required)" required>
@@ -534,7 +600,7 @@ Call <a href="tel:2532546538" style="color:#3B82F6;">253-254-6538</a>.
   <button>Submit</button>
 </form>
 
-<!-- POPUP -->
+<!-- THANK YOU POPUP -->
 <div id="thankYouPopup"
      style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.85);
             z-index:999999; justify-content:center; align-items:center;">
@@ -583,11 +649,10 @@ function closePopup() {
 }
 </script>
 
-<!-- INTRO IMAGE -->
 <img src="introductory_class.jpg" style="width:100%;margin-top:20px;border-radius:14px;display:block;">
 </section>
 
-<!-- POPUP -->
+<!-- POPUP VIEWER -->
 <div id="imgPopup" onclick="this.style.display='none'" 
      style="display:none;position:fixed;inset:0;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:99999;">
   <img style="max-width:90%;max-height:90%;border-radius:12px;">
@@ -606,32 +671,21 @@ function toggleAcc(btn){
 
 <!-- FOOTER -->
 <footer>
-
 <div class="footer-img-row"><img src="military_discounts.gif"></div>
 <div class="footer-img-row"><img src="no_bullies.jpg"></div>
 <div class="footer-img-row"><img src="sanitized_facility.jpg"></div>
-<!-- SOCIAL MEDIA ICONS -->
+
 <div style="text-align:center; margin:25px 0;">
-  
-  <!-- Instagram -->
-<a href="https://instagram.com/gritcitybjj"
-   target="_blank"
-   rel="noopener noreferrer"
-   style="text-decoration:none; color:transparent;">
-   <img src="instagram.png" style="width:38px; margin:0 12px;">
-</a>
-
-  <!-- Facebook -->
-<a href="https://facebook.com/gritcitybjj"
-   target="_blank"
-   rel="noopener noreferrer"
-   style="text-decoration:none; color:transparent;">
-   <img src="facebook.png" style="width:38px; margin:0 12px;">
-</a>
-
+<a href="https://instagram.com/gritcitybjj" target="_blank"><img src="instagram.png" style="width:38px; margin:0 12px;"></a>
+<a href="https://facebook.com/gritcitybjj" target="_blank"><img src="facebook.png" style="width:38px; margin:0 12px;"></a>
 </div>
+
 <p>&copy; 2025 GRIT CITY BJJ — All Rights Reserved</p>
 </footer>
 
+</div><!-- END site-wrap -->
 </body>
 </html>
+
+
+
