--- a/testindex.html
+++ b/testindex.html
@@ -291,6 +291,8 @@ footer {
 </head>
 
 <body>
+<a href="#try">Free Class</a>
+
 <div class="site-wrap">
 
 <!-- HEADER -->
@@ -346,6 +348,7 @@ footer {
   <div class="program-box">MMA</div>
 </div>
 </section>
+<a href="#try">Free Class</a>
 
 <!-- SCHEDULE -->
 <section id="schedule">
@@ -680,12 +683,9 @@ function toggleAcc(btn){
 <a href="https://facebook.com/gritcitybjj" target="_blank"><img src="facebook.png" style="width:38px; margin:0 12px;"></a>
 </div>
 
-<p>&copy; 2025 GRIT CITY BJJ — All Rights Reserved</p>
+<p>&copy; 2026 GRIT CITY BJJ — All Rights Reserved</p>
 </footer>
 
 </div><!-- END site-wrap -->
 </body>
 </html>
-
-
-
