Reposition image for better conversion flow
Moved the introductory class image above the form to enhance conversion flow.

--- a/testindex.html
+++ b/testindex.html
@@ -591,6 +591,9 @@ to speak directly with the academy.
 <section id="try">
 <h2>Try a Free Class</h2>
 
+<!-- Moved image ABOVE the form for better conversion flow -->
+<img src="introductory_class.jpg" style="width:100%;margin-top:20px;margin-bottom:30px;border-radius:14px;display:block;">
+
 <form id="freeClassForm" action="https://formsubmit.co/gritcitybjj@gmail.com" method="POST">
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_next" value="">
@@ -652,7 +655,6 @@ function closePopup() {
 }
 </script>
 
-<img src="introductory_class.jpg" style="width:100%;margin-top:20px;border-radius:14px;display:block;">
 </section>
 
 <!-- POPUP VIEWER -->
