--- a/testindex.html
+++ b/testindex.html
@@ -303,6 +303,9 @@ footer {
   BJJ COACH International Association | Tacoma, WA
 </div>
 
+<img src="introductory_class.jpg" style="width:100%;margin-top:20px;border-radius:14px;display:block;">
+<a href="#try" style="display:block; text-align:center; margin:10px 0 30px 0; color:#3B82F6; font-weight:800; font-size:1.1rem;">Try a Free Class →</a>
+
 <!-- NAV -->
 <div class="navbar">
   <div class="nav-inner">
@@ -407,6 +410,11 @@ footer {
   <img src="best_of_tacoma_2012.jpg" onclick="pop(this)">
 </div>
 </section>
+
+<img src="introductory_class.jpg" style="width:100%;margin:30px 0 20px 0;border-radius:14px;display:block;">
+<div style="text-align:center; margin-bottom:40px;">
+  <a href="#try" style="background:#3B82F6; padding:14px 28px; border-radius:10px; color:white; font-weight:800; text-decoration:none; display:inline-block;">Try a Free Class Today</a>
+</div>
 
 <!-- LINEAGE -->
 <section>
