--- a/index.html
+++ b/index.html
@@ -520,13 +520,13 @@ footer {
 <form id="freeClassForm" action="https://formsubmit.co/gritcitybjj@gmail.com" method="POST" class="notranslate">
   <input type="hidden" name="_next" value="">
 
-  <!-- Honeypot (invisible to humans) -->
+  <!-- Honeypot (invisible, traps basic bots) -->
   <div style="position:absolute; left:-9999px; top:-9999px; opacity:0;">
-    <input type="text" name="honeypot" tabindex="-1" autocomplete="off">
+    <input type="text" name="_honey" tabindex="-1" autocomplete="off">
   </div>
 
-  <!-- Blacklist spam keywords/URLs -->
-  <input type="hidden" name="_blacklist" value="http, https, .com, .ru, .xyz, .top, porn, viagra, casino, seo, escort, gambling">
+  <!-- Safer blacklist (blocks spam links/words, NOT normal email domains) -->
+  <input type="hidden" name="_blacklist" value="http, https, .ru, .xyz, .top, porn, viagra, casino, seo, escort, gambling, sex, adult, cialis, loan, payday">
 
   <input name="Name" placeholder="Name (required)" lang="en" translate="no" required>
   <input name="Email" type="email" placeholder="Email (required)" lang="en" translate="no" required>
@@ -605,4 +605,5 @@ function toggleAcc(btn){
 </div><!-- END site-wrap -->
 </body>
 </html>
+
 
